# rust-scratch-book

./: Cargo.toml
snippets/middle-writer/: Cargo.toml
snippets/middle-writer/src/: main.rs
snippets/serde-unstructured-yaml/: Cargo.toml
snippets/serde-unstructured-yaml/src/: main.rs
snippets/tracing-with-fields/: Cargo.toml
snippets/tracing-with-fields/src/: main.rs
snippets/yaml-web-server/: Cargo.toml
snippets/yaml-web-server/charts/test-chart-1/: Chart.yaml  values.yaml
snippets/yaml-web-server/charts/test-chart-1/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
snippets/yaml-web-server/charts/test-chart-1/templates/tests/: test-connection.yaml
snippets/yaml-web-server/charts/test-chart-2/: Chart.yaml  values.yaml
snippets/yaml-web-server/charts/test-chart-2/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
snippets/yaml-web-server/charts/test-chart-2/templates/tests/: test-connection.yaml
snippets/yaml-web-server/charts/test-chart-3/: Chart.yaml  values.yaml
snippets/yaml-web-server/charts/test-chart-3/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
snippets/yaml-web-server/local/charts/test-chart-1/: Chart.yaml
snippets/yaml-web-server/local/charts/test-chart-3/: Chart.yaml
snippets/yaml-web-server/src/: chart.rs  main.rs
snippets/yaml-web-server/src/chart/: merger.rs  spec.rs
src/: main.rs
(+1 files in other folders)
